# confound-insight

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
api/app/analysis/: apps.py  models.py
api/app/compound/: apps.py
api/app/product/: apps.py
api/apps/analysis/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
api/apps/compounds/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
api/apps/products/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
api/config/: settings.py  urls.py
pipeline/: README.md
scripts/: init_db.sql
src/data/: models.py
src/integrations/: mfds_client.py
